<resources>
    <string name="app_name">Diary.ly</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>

    <string name="Email">Email</string>
    <string name="enterEmail">Enter your Email</string>
    <string name="Password">Password</string>
    <string name="enterPassword">Enter your Password</string>

    <string name="username">Username</string>
    <string name="enterUsername">Enter your Username</string>
    <string name="confirmPassword">ConfirmPassword</string>
    <string name="enterConfirmPassword">Enter your Confirm Password</string>

    <string name="forgotPassword">Forgot Password ?</string>
    <string name="redirectRegister">Don\'t have an account?</string>
    <string name="registerHere">Register Here</string>

    <string name="redirectLogin">Already have an account?</string>
    <string name="loginHere">Login Here</string>

    <string name="forgotPasswordTitle">Forgot Password</string>
    <string name="forgotPasswordContent">Enter an email registered before, to reset your password</string>

    <string name="sendLink">Send Link</string>
    <string name="myJournal">My Journal</string>

    <string name="profilePicture">Profile Picture</string>
    <string name="Update">Update</string>
    <string name="EditProfileTitle">Edit Profile</string>

    <string name="JournalTitle">Journal Title</string>
    <string name="JournalContent">Content</string>
    <string name="JournalDate">31 October 2023</string>
    <string name="add_new_journal">Add New Journal</string>
    <string name="journal_title">Journal Title</string>
    <string name="enter_journal_title">Enter Journal Title</string>
    <string name="content">Content</string>
    <string name="enter_journal_content">Enter Journal Content</string>
    <string name="date">Date</string>
    <string name="enter_journal_date">Enter Journal Date</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_profile">Image Profile</string>
    <string name="journal_visibility">Journal Visibility</string>
    <string name="private_post">Private</string>
    <string name="public_post">Public</string>
    <string name="add_journal">Add Journal</string>
    <string name="back_button">Back Button</string>
    <string name="textview">TextView</string>
    <string name="total_journal">Total Journal</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="edit_moods">Edit Moods</string>
    <string name="enter_moods_date">Enter Moods Date</string>
    <string name="time">Time</string>
    <string name="enter_moods_time">Enter Moods Time</string>
    <string name="choose_moods">Choose Moods</string>
    <string name="notes">Notes</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="check_del_button">Check Del Button</string>
    <string name="check_confirm_button">Check Confirm Button</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="title">Title</string>
    <string name="emoji_image">Emoji Image</string>
    <string name="neutral">Neutral</string>
    <string name="moodstime">10:00</string>
    <string name="happy">happy</string>
    <string name="logout">Logout</string>

    <string name ="btnSendLink">"Please enter your email address.</string>
    <string name ="resetPassSent">A password reset email has been sent to your email address.</string>
    <string name ="resetPassFail">Failed to send password reset email. Please try again later.</string>
    <string name ="emailNotRegistered">The email address is not registered..</string>
    <string name ="fillAllTheFields">Please fill in all the fields.</string>
    <string name ="signInSuccess">User signed in successfully!.</string>
    <string name ="signInFailed">User signed in failed!.</string>
    <string name ="usernameNoSpace">Username must not contain spaces.</string>
    <string name ="usernameLengthValidation">Username must be between 3 and 30 characters..</string>
    <string name ="passwordNotMatch">Passwords do not match.</string>
    <string name ="accountCreateSuccess">User account created successfully.</string>
    <string name ="accountCreateFailed">User account creation failed.</string>

    <string name ="journalAddSuccess">Journal added to Successfully.</string>
    <string name ="journalAddFailed">Error when adding journal.</string>
    <string name ="journalUpdateSuccess">Journal updated to Successfully.</string>
    <string name ="journalDeleteSuccess">Journal Deleted Successfully!.</string>
    <string name ="journalDeleteFailed">Failed to delete journal!.</string>

    <string name ="chooseAMood">Please choose a mood before saving!</string>
    <string name ="moodsAddSuccess">Moods added to Successfully.</string>
    <string name ="moodsAddFailed">Error when adding moods.</string>
    <string name ="moodsUpdateSuccess">Moods updated to Successfully.</string>
    <string name ="moodsUpdateFailed">Error when updating moods.</string>
    <string name ="moodsDeleteSuccess">Moods Deleted Successfully!.</string>
    <string name ="moodsDeleteFailed">Failed to delete moods!.</string>

    <string name ="profileUpdatedSuccess">Profile Updated Successfully!.</string>
    <string name ="noCameraApp">No camera app found!.</string>
    <string name="loginAgain">Your session has ended, please login again!</string>

    <string name="notifHeader">Moods and Journal Reminder</string>
    <string name="notifContent">Dont forget to input your journal and moods today!</string>

    <string name="logoutConfirm">Are you sure you want to log out?</string>

    <string name="YesConfirm">Yes</string>
    <string name="NoConfirm">No</string>

    <string name="deleteMood">Are you sure you want to delete this mood entry?</string>

    <string name="deleteJournalTitle">Delete journal?</string>
    <string name="deleteJournal">Are you sure you want to delete this journal entry?</string>

    <string name="takePhoto">Take Photo?</string>
    <string name="takeGallery">Choose from Gallery?</string>

    <string name="cancel">Cancel</string>

    <string name="chooseAction">
         Choose Action
    </string>

</resources>