<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvCurrentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="34dp"
        android:text="@string/username"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/imgProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTotalJournal"
        android:layout_width="194dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="9dp"
        android:text="@string/total_journal"
        app:layout_constraintBottom_toTopOf="@+id/btnEditProfile"
        app:layout_constraintStart_toEndOf="@+id/imgProfile" />

    <ImageButton
        android:id="@+id/imgProfile"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="492dp"
        android:contentDescription="@string/profilePicture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="491dp"
        android:text="@string/EditProfileTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgProfile" />

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="491dp"
        android:text="@string/delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>