<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF2D8"
    tools:context=".authentication.LoginActivity" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="75dp"
        android:text="@string/Login"
        android:textSize="34sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="69dp"
        android:layout_height="34dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="11dp"
        android:text="@string/Password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:layout_marginStart="188dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="40dp"
        android:text="@string/forgotPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvRedirectRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRedirectRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/redirectRegister"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tvRegisterHere" />

    <TextView
        android:id="@+id/tvRegisterHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/registerHere"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>